[gd_scene load_steps=3 format=3 uid="uid://gqg1urq1up6"]

[ext_resource type="Script" uid="uid://6vlqt8hpdcwu" path="res://scenes/QuoteCard/QuoteCard.gd" id="1_ddmun"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5uqg"]
content_margin_top = 20.0
bg_color = Color(0.928125, 0.928125, 0.928125, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="QuoteCard" type="Panel"]
custom_minimum_size = Vector2(650, 250)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i5uqg")
script = ExtResource("1_ddmun")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
alignment = 1

[node name="TextLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
autowrap_mode = 3

[node name="SourceLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
size_flags_horizontal = 8
horizontal_alignment = 2
autowrap_mode = 3
